--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </ul>
         </p>
 
-        <h2>Services</h2>
+        <h2 class="subtitle" id="services" style="color:yellow   ">Services</h2>
 
         <table border="1">
             <thead>
