--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 
     <body>
 
-        <h1 class="title">My Website</h1>
+        <h1>My Website</h1>
+
+        <a href="https://www.reddit.com" id='reddit-link'>Reddit</a>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua.</p>
 
-        <h2 class="subtitle">About Me</h2>
+        <h2 class="subtitle" id="about-me">About Me</h2>
 
         <img src="img/img-1.jpeg">
 
@@ -35,7 +37,7 @@
             </ul>
         </p>
 
-        <h2 class="subtitle" id="services" style="color:yellow   ">Services</h2>
+        <h2 class="subtitle">Services</h2>
 
         <table border="1">
             <thead>
@@ -63,7 +65,7 @@
 
         <img src="img/img-2.jpeg">
 
-        <h2 id="contact-us">Contact Us</h2>
+        <h2 class="subtitle">Contact Us</h2>
 
         <form>
             <input type="text" placeholder="Full Name">
