--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
 
     <body>
 
-        <h1>My Website</h1>
+        <div id="test-image-div"></div>
+        
+        <h1 id="title">My Website</h1>
 
-        <a href="https://www.reddit.com" id='reddit-link'>Reddit</a>
+        <a href="https://www.reddit.com" id='reddit-link' class="link">Reddit</a>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        <p class="para-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua.</p>
 
-        <h2 class="subtitle" id="about-me">About Me</h2>
+        <h2 class="subtitle" id="about-me" class="subtitle">About Me</h2>
 
         <img src="img/img-1.jpeg">
 
-        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
+        <p class="para-text">Duis aute irure dolor in reprehenderit in voluptate velit esse
         cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
@@ -31,11 +33,11 @@
         Cillum dolore eu fugiat nulla , pariatur:
 
             <ul>
-                <li>Excepteur sint occaecat</li>
-                <li>cupidatat non proident</li>
-                <li>sunt in culpa.</li>
+                <li class="list-item">Excepteur sint occaecat</li>
+                <li class="list-item">cupidatat non proident</li>
+                <li class="list-item">sunt in culpa.</li>
                 <ol>
-                    <li>sub-sub list item</li>
+                    <li class="list-item">sub-sub list item</li>
                 </ol>
 
             </ul>
@@ -72,10 +74,10 @@
         <h2 class="subtitle">Contact Us</h2>
 
         <form>
-            <input type="text" placeholder="Full Name">
-            <input type="email" placeholder="Email">
+            <input type="text" placeholder="Full Name" class="form-input">
+            <input type="email" placeholder="Email" class="form-input">
             <textarea></textarea>
-            <button>Submit</button>	
+            <button class="button">Submit</button>	
 
         </form>
     </body>
