--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <body>
 
         <div id="test-image-div"></div>
+
+        <div id="linear-gradient-check"></div>
+
+        <div id="radial-gradient-check"></div>
         
         <h1 id="title">My Website</h1>
 
